changed questions to Yes answers

--- a/Guessing.html
+++ b/Guessing.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Guessing Game</title>
 
-		<header>Questions about Me.</header>
+		<header>Questions about Me, Amina.</header>
 <body>
-	<h1>These few questions will help you get to know me.</h1>
+	<h1>These few questions will help you get to know me, enjoy!!</h1>
 
 </body>	
 
